# ocaml-agent

./: .gitignore  .gitmodules  README.md  dune  dune-project  ocaml_agent.opam
.github/workflows/: ci.yml
examples/: dune  sdk_extension.ml  sdk_host.ml
lib/: agent.ml  commands.ml  complete.ml  config_paths.ml  dune  dune.bak  extension_component_text.ml  extension_event_json.ml  extension_manifest.ml  extension_node_bridge.ml  extension_sdk.ml  extension_sdk.mli  extensions.ml  http.ml  keymap.ml  llm.ml  mentions.ml  model_spec.ml  models.ml  ocaml_agent.ml  ocaml_agent.mli  packages.ml  prompts.ml  render.ml  rpc.ml  session.ml  settings.ml  skills.ml  themes.ml  tools.ml  transport.ml  tui.ml
test/: dune  dune.bak  ocaml_sdk_extension.ml  test_context_render.ml  test_core_session_rpc.ml  test_extension_basic.ml  test_extension_direct.ml  test_extension_frontmatter.ml  test_extension_io_hooks.ml  test_extension_lifecycle_hooks.ml  test_extension_package_manager.ml  test_extension_provider_ui.ml  test_extension_rpc_commands.ml  test_extension_runtime_lifecycle.ml  test_extension_sdk_runtime_programmatic.ml  test_extension_session_actions.ml  test_extension_settings_manager.ml  test_extension_tree_summary.ml  test_file_tools.ml  test_misc.ml  test_models.ml  test_resources.ml  test_search_tools.ml  test_tools.ml
