(test
 (name test_tools)
 (libraries agent_lib notty)
 (deps ocaml_sdk_extension.exe))

(test
 (name test_misc)
 (libraries agent_lib notty))

(test
 (name test_models)
 (libraries agent_lib))

(test
 (name test_file_tools)
 (libraries agent_lib))

(test
 (name test_search_tools)
 (libraries agent_lib))

(test
 (name test_context_render)
 (libraries agent_lib))

(test
 (name test_resources)
 (libraries agent_lib))

(executable
 (name ocaml_sdk_extension)
 (libraries agent_lib str))
