(test
 (name test_tools)
 (libraries agent_lib notty)
 (deps ocaml_sdk_extension.exe))

(test
 (name test_misc)
 (libraries agent_lib notty))

(test
 (name test_models)
 (libraries agent_lib))

(test
 (name test_file_tools)
 (libraries agent_lib))

(test
 (name test_search_tools)
 (libraries agent_lib))

(test
 (name test_context_render)
 (libraries agent_lib))

(test
 (name test_resources)
 (libraries agent_lib))

(test
 (name test_core_session_rpc)
 (libraries agent_lib))

(test
 (name test_extension_basic)
 (libraries agent_lib)
 (deps ocaml_sdk_extension.exe))

(test
 (name test_extension_direct)
 (libraries agent_lib))

(test
 (name test_extension_rpc_commands)
 (libraries agent_lib))

(test
 (name test_extension_session_actions)
 (libraries agent_lib))

(test
 (name test_extension_runtime_lifecycle)
 (libraries agent_lib)
 (deps ocaml_sdk_extension.exe))

(test
 (name test_extension_provider_ui)
 (libraries agent_lib))

(test
 (name test_extension_io_hooks)
 (libraries agent_lib))

(test
 (name test_extension_tree_summary)
 (libraries agent_lib))

(test
 (name test_extension_lifecycle_hooks)
 (libraries agent_lib))

(executable
 (name ocaml_sdk_extension)
 (libraries agent_lib str))
